--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
+html {
+  width: 100%;
+}
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: sans-serif;
+  background-color: rgb(240, 240, 255);
 }
