--- a/src/components/form.module.css
+++ b/src/components/form.module.css
@@ -2,7 +2,8 @@
   background-color: #fff;
   border-radius: 8px;
   padding: 20px;
-  width: 500px;
+  width: 100%;
+  max-width: calc(100% / 1.5);
   margin: 0 auto;
   margin-top: 50px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -24,8 +25,14 @@
   display: inline-block;
   border: none;
   border-radius: 4px;
-  background-color: #f7ca18;
+  background-color: #1d2540;
   padding: 6px 12px;
   color: #fff;
   cursor: pointer;
+}
+@media only screen and (max-width: 768px) {
+  .todoform {
+    max-width: calc(100% / 1.2);
+    margin-top: 25px;
+  }
 }
