--- a/src/components/todolist.module.css
+++ b/src/components/todolist.module.css
@@ -2,8 +2,14 @@
   background-color: #fff;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  width: 500px;
+  width: 100%;
+  max-width: calc(100% / 1.5);
+  padding: 0 20px;
   margin: 0 auto;
-  padding: 20px;
   margin-top: 50px;
+}
+@media only screen and (max-width: 768px) {
+  .list {
+    max-width: calc(100% / 1.07);
+  }
 }
